--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(country_cases)
 export(country_cases_growth)
 import(dplyr)
 import(rlang)
+importFrom(curl,has_internet)
 importFrom(httr,GET)
 importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
@@ -17,5 +18,8 @@ importFrom(lubridate,week)
 importFrom(magrittr,"%>%")
 importFrom(purrr,set_names)
 importFrom(readr,read_rds)
+importFrom(sf,st_read)
+importFrom(sf,st_sf)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
+importFrom(usethis,use_data)
